Add selected books into cart

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Login Form</title>
+<style>
+body {
+	background-image: url('bookshop.jpg');
+}
+</style>
 </head>
 <body>
 	<form action="validate" method="post">
@@ -15,7 +20,7 @@
 				<td>Enter Password</td>
 				<td><input type="password" name="pass" /></td>
 			</tr>
-			
+
 			<tr>
 				<td><input type="submit" value="Login" /></td>
 			</tr>
